[project]
name = "world-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "gymnasium[box2d,classic-control]>=0.29.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "moviepy>=1.0.3",
    "nvitop>=1.3.2",
    "opencv-python>=4.10.0.84",
    "peft>=0.12.0",
    "scipy>=1.14.1",
    "swig>=4.2.1",
    "transformers>=4.44.2",
]
