[project]
name = "world-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers",
    "einops",
    "gymnasium[box2d,classic-control]",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "moviepy",
    "nvitop",
    "opencv-python",
    "peft",
    "scipy",
    "swig",
    "transformers",
]
